# word-memorize-system

./: README.md
Memorize_word_tool/: CMakeLists.txt  MySqlTableModel.h  c2e.cpp  c2e.h  c2e.ui  e2c.cpp  e2c.h  e2c.ui  login.cpp  login.h  login.ui  memory.cpp  memory.h  memory.ui  mysqltablemodel.cpp  sayHello.py  signup.cpp  signup.h  signup.ui  wordslibrary.cpp  wordslibrary.cpp.autosave  wordslibrary.h  wordslibrary.ui
build-Memorize_word_tool-Desktop_Qt_5_9_9_MinGW_32bit-Debug/: CMakeCache.txt  Makefile  Memorize_word_tool.cbp  cmake_install.cmake  data.db  sayHello.py
build-Memorize_word_tool-Desktop_Qt_5_9_9_MinGW_32bit-Debug/.cmake/api/v1/reply/: cache-v2-90aec8dac5114f7f587a.json  cache-v2-cc8ee2599cae561437d4.json  cache-v2-f7e5361899580f87123f.json  cmakeFiles-v1-b2eb73c35549a26f081f.json  codemodel-v2-5caf4cd54af367f35348.json  codemodel-v2-61db95d2032ecc5b8daf.json  codemodel-v2-6a12859f3cacadaebb86.json  codemodel-v2-8d0b30dd26f4fec085be.json  codemodel-v2-e11285cf4b5f822e53ec.json  codemodel-v2-fbeea81e1d822b957430.json  index-2022-10-03T07-27-17-0525.json  (+12 more)
build-Memorize_word_tool-Desktop_Qt_5_9_9_MinGW_32bit-Debug/Memorize_word_tool_autogen/: mocs_compilation.cpp
build-Memorize_word_tool-Desktop_Qt_5_9_9_MinGW_32bit-Debug/Memorize_word_tool_autogen/EWIEGA46WW/: moc_c2e.cpp  moc_e2c.cpp  moc_login.cpp  moc_memory.cpp  moc_signup.cpp  moc_wordslibrary.cpp
build-Memorize_word_tool-Desktop_Qt_5_9_9_MinGW_32bit-Debug/Memorize_word_tool_autogen/include/: ui_c2e.h  ui_e2c.h  ui_login.h  ui_memory.h  ui_signup.h  ui_wordslibrary.h
